un bon commencement git add *

--- a/front-end/src/app/connecter/connecter.component.html
+++ b/front-end/src/app/connecter/connecter.component.html
@@ -22,7 +22,7 @@
         <div class="form-group">
           <label class="control-label" for="btnSigner"></label>
           <div>
-            <button id="btnSigner" type="submit" name="btnSigner" class="btn btn-primary">Signer</button>
+            <button id="btnSigner" type="submit" name="btnSigner" class="btn btn-success">Signer</button>
           </div>
 
         </div>
