--- a/front-end/src/app/contact/contact.component.html
+++ b/front-end/src/app/contact/contact.component.html
@@ -1,1 +1,23 @@
 <p>contact works!</p>
+<div class="form-holder">
+  <header>
+    <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nous contacter</font></font></h2>
+    <h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">N'hésitez pas à nous contacter</font></font></h3>
+  </header>
+  <form id="contact-form" method="get" action="#" novalidate="novalidate">
+    <div class="row">
+      <label for="user-name" class="col-md-6 unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nom
+      </font></font><input id="user-name" type="text" name="username" required="">
+      </label>
+      <label for="user-email" class="col-md-6 unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Email
+      </font></font><input id="user-email" type="email" name="useremail" required="">
+      </label>
+      <label for="message" class="col-md-12 unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Votre message
+      </font></font><textarea id="message" name="message" required=""></textarea>
+      </label>
+      <div class="col-md-12">
+        <button id="submit" type="submit" class="btn btn-unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Envoyer</font></font></button>
+      </div>
+    </div>
+  </form>
+</div>
