--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class = "jumbotron">
+  <h1 class = "display-3"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Un Service Pro Pour Les Pros ! </font> </font> </ h1>
+  <p class = "lead"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">Depuis plus de 30 ans, ID lunch propose des produits frais destinés aux professionnels de la restauration. </font> </font> </p>
+  <hr class = "my-4">
+  <p> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">Spécialisé sur les produits viandes, oeufs et légumes. </font> </font> </p>
+  <p><b>Bon appétit !!</b></p>
+  <p class = "lead">
+    <a class="btn btn-success" href="https://www.companyweb.be/societe/ID%20LUNCH/SPRL/829333964" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Dites M'en Plus</font> </font> </a>
+  </p>
+</div>
