add produit shearch

--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -8,3 +8,11 @@
     <a class="btn btn-success" href="https://www.companyweb.be/societe/ID%20LUNCH/SPRL/829333964" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Dites M'en Plus</font> </font> </a>
   </p>
 </div>
+<div>
+  <p><b>Produits</b></p>
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit" (click)="clickS()">Search</button>
+    <div class="tab"></div>
+  </form>
+</div>
