--- a/front-end/src/app/app.component.html
+++ b/front-end/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
   <div class="row">
-      <app-banniere></app-banniere>
+    <app-nav-bar></app-nav-bar>
   </div>
 </div>
