--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -12,7 +12,7 @@
   <p><b>Produits</b></p>
   <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="text" placeholder="Search">
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit" (click)="clickS()">Search</button>
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit" (click)="clickS()">Re</button>
     <div class="tab"></div>
   </form>
 </div>
