--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -5,14 +5,16 @@
   <p> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">Spécialisé sur les produits viandes, oeufs et légumes. </font> </font> </p>
   <p><b>Bon appétit !!</b></p>
   <p class = "lead">
-    <a class="btn btn-success" href="https://www.companyweb.be/societe/ID%20LUNCH/SPRL/829333964" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Dites M'en Plus</font> </font> </a>
+    <a class="btn btn-success" href="https://trendstop.levif.be/fr/detail/439928949/i-d-lunch.aspx" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Dites M'en Plus</font> </font> </a>
   </p>
 </div>
 <div>
   <p><b>Produits</b></p>
   <form class="form-inline my-2 my-lg-0">
     <input class="form-control mr-sm-2" type="text" placeholder="Search">
-    <button class="btn btn-secondary my-2 my-sm-0" type="submit" (click)="clickS()">Re</button>
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit" (click)="clickS()"></button>
     <div class="tab"></div>
   </form>
 </div>
+
+
