--- a/front-end/src/app/contact/contact.component.html
+++ b/front-end/src/app/contact/contact.component.html
@@ -1,23 +1,39 @@
-<p>contact works!</p>
-<div class="form-holder">
-  <header>
-    <h2><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nous contacter</font></font></h2>
-    <h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">N'hésitez pas à nous contacter</font></font></h3>
-  </header>
-  <form id="contact-form" method="get" action="#" novalidate="novalidate">
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<section id="contact">
+  <div class="container">
+    <div class="well well-sm">
+      <h3><strong>Contact</strong></h3>
+    </div>
+
     <div class="row">
-      <label for="user-name" class="col-md-6 unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Nom
-      </font></font><input id="user-name" type="text" name="username" required="">
-      </label>
-      <label for="user-email" class="col-md-6 unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Email
-      </font></font><input id="user-email" type="email" name="useremail" required="">
-      </label>
-      <label for="message" class="col-md-12 unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Votre message
-      </font></font><textarea id="message" name="message" required=""></textarea>
-      </label>
-      <div class="col-md-12">
-        <button id="submit" type="submit" class="btn btn-unique"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Envoyer</font></font></button>
+      <div class="col-md-7">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2529.3525436754767!2d5.4270639159048235!3d50.65771458028937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c0fdb592b60b61%3A0x64c6f4a820ebce70!2sI.D%20Lunch!5e0!3m2!1sfr!2sbe!4v1584004556035!5m2!1sfr!2sbe" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      </div>
+
+      <div class="col-md-5">
+        <h4><strong>Renseignements</strong></h4>
+        <form>
+          <div class="form-group">
+            <input type="text" class="form-control" name="" value="" placeholder="Nom">
+          </div>
+          <div class="form-group">
+            <input type="email" class="form-control" name="" value="" placeholder="E-mail">
+          </div>
+          <div class="form-group">
+            <input type="tel" class="form-control" name="" value="" placeholder="Téléphone">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" name="" rows="3" placeholder="Message"></textarea>
+          </div>
+          <button class="btn btn-default" type="submit" name="button">
+            <i class="fa fa-paper-plane-o" aria-hidden="true"></i> Envoyer
+          </button>
+        </form>
       </div>
     </div>
-  </form>
-</div>
+  </div>
+</section>
