--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,14 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <div class="navbar-header">
+    <div class="navbar-header" routerLinkActive="active">
       <a class="navbar-brand" routerLink="/">iDlunch</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a routerLink="/news">News</a></li>
-      <li><a routerLink="/contact">Contact</a></li>
+      <li routerLinkActive="active"><a routerLink="/news">News</a></li>
+      <li routerLinkActive="active"><a routerLink="/contact">Contact</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a routerLink="/enregistrer"><span class="glyphicon glyphicon-user"></span> S'enregistrer</a></li>
-      <li><a routerLink="/connecter"><span class="glyphicon glyphicon-log-in"></span> Se connecter</a></li>
+      <li routerLinkActive="active"><a routerLink="/connecter"><span class="glyphicon glyphicon-log-in"></span> Se connecter</a></li>
     </ul>
   </div>
 </nav>
