--- a/front-end/src/app/connexion-priv/connexion-priv.component.html
+++ b/front-end/src/app/connexion-priv/connexion-priv.component.html
@@ -4,18 +4,41 @@
     <form id="frm-login" class="form-horizontal" action="javascript:ctrl.effectuerLogin();">
       <fieldset>
         <!-- Text input-->
-        <div class="form-group">
-          <label class="control-label" for="nomUtilisateur"><span class="glyphicon glyphicon-user"></span> Nom d'utilisateur</label>
+        <div class="row">
+          <label class="control-label" for="nom"><span class="glyphicon glyphicon-user"></span> Utilisateur</label>
           <div>
-            <input id="nomUtilisateur" name="nomUtilisateur" type="text" placeholder="Entrez votre nom d'utilisateur" class="form-control input-md" required="">
+            <input id="nom" name="nom" type="text" placeholder="Entrez votre nom" class="form-control" required="">
+          </div>
+          <div  class="col">
+            <input id="prenom" name="prenom" type="text" placeholder="Entrez votre prenom" class="form-control" required="">
           </div>
         </div>
 
+        <div  class="form-group">
+          <label class="control-label" for="nom"><span class="glyphicon glyphicon-cutlery"></span> Société</label>
+          <div>
+            <input id="societe" name="societe" type="text" placeholder="Entrez votre société" class="form-control input-md" required="">
+          </div>
+        </div>
+
+        <div  class="form-group">
+          <label class="control-label" for="nom"><span class="glyphicon glyphicon-envelope"></span> Adresse mail</label>
+          <div>
+            <input id="mail" name="mail" type="text" placeholder="Entrez votre e-mail" class="form-control input-md" required="">
+          </div>
+        </div>
         <!-- Password input-->
         <div class="form-group">
           <label class="control-label" for="mdp"><span class="glyphicon glyphicon-lock"></span> Mot de passe</label>
           <div>
             <input id="mdp" name="mdp" type="password" placeholder="Entrez votre mot de passe" class="form-control input-md" required="">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="control-label" for="code"><span class="glyphicon glyphicon-lock"></span> Code</label>
+          <div>
+            <input id="code" name="code" type="text" placeholder="Entrez le code" class="form-control input-md" required="">
           </div>
         </div>
         <!-- Button -->
