--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -1,12 +1,18 @@
 
 <div class="row">
+  <h1 class="title"><span>Produits</span></h1>
   <div class="col-md-12 pad-10">
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Produits">
+      </div>
+      <button type="submit" class="btn btn-default">Recherche de produits</button>
+    </form>
     <button type="submit" class="btn btn-primary" (click)="goToAddProduits()">
       <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Produit
     </button>
   </div>
 </div>
-
 <table class="table table-striped">
   <thead>
   <tr>
