--- a/front-end/src/app/produit/produit.component.scss
+++ b/front-end/src/app/produit/produit.component.scss
@@ -16,3 +16,9 @@
   background: #4CAF50;
   padding:4px 8px;
 }
+
+.btn-primary {
+  color: #fff;
+  background-color: seagreen;
+  border-color: seagreen;
+}
