somes change with the stockage of the pictures

--- a/front-end/src/app/news/news.component.html
+++ b/front-end/src/app/news/news.component.html
@@ -11,7 +11,7 @@
   <div class="row">
 
     <div class="col-md-8">
-      <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/t8uAqaLoOCz_uCI8ghpOHaan3SMA6pJLubII4Li_O8vZgUAeWiXF5JvTehO-fH5AUJj3R1Jrr1z3ggBQpojO1z_EoUZttalQczvzEkMhJrRqWnOk6FHRymTyhaFlNRkKMG1Lb7jhKgDLa6a8zwdGM6HJCBBr7m73lnMG" alt="">
+      <img src="../assets/images/Logo.jpg"/>
     </div>
 
     <div class="col-md-4">
@@ -30,34 +30,26 @@
   <!-- /.row -->
 
   <!-- Related Projects Row -->
-  <h3 class="my-4">Related Projects</h3>
+  <h3 class="my-4">Projet équitable</h3>
 
   <div class="row">
 
-    <div class="col-md-3 col-sm-6 mb-4">
+    <div class="col-md-5 col-sm-6 mb-4">
       <a href="#">
-        <img class="img-fluid" src="https://ekladata.com/gNFPIAKuOYL4SuDxXpwDcrbT_bU@500x300.jpg" alt="panier">
+        <img class="img-fluid" src="../assets/images/Panier.jpg" alt="panier"/>
         <a class="btn btn-success" href="#" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Apprendre encore plus </font> </font> </a>
       </a>
     </div>
 
     <div class="col-md-3 col-sm-6 mb-4">
       <a href="#">
-        <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/Qu8LxggnOF6n96ZOSt5XOOkrLTKmA-hDqgdz4Ose1ptEqhNoVmfiLVxrpkl_wzA6H-MopCyJX0C-KdyB14PddehoyzJ6MBm42EVo_gmEjQs_hHqG9tjAp0-Rf7NRfKQOw-TJwjIGGUmVqChY1H0c6D8" alt="">
+        <img class="img-fluid" src="../assets/images/Coeur.jpg" alt="coeur"/>
       </a>
     </div>
 
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-        <img class="img-fluid" src="https://www.chouxdebruxelles.be/wp-content/uploads/2016/08/hp-restaurants.jpg" alt="">
-      </a>
-    </div>
 
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-        <img class="img-fluid" src="https://www.deux-clefs.com/documents/sante-500x300.jpg" alt="">
-      </a>
-    </div>
+
+
 
   </div>
   <!-- /.row -->
