--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -10,6 +10,7 @@
       <button type="submit" class="btn btn-primary" (click)="goToAddProduits()">
       <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Produit
     </button>
+      <button type="submit" class="btn btn-danger" (click)="deleteProduit()">Supprimer un produit</button>
     </form>
   </div>
 </div>
