--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -6,7 +6,7 @@
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Produits">
       </div>
-      <button type="submit" class="btn btn-default">Recherche de produits</button>
+      <button type="submit" class="btn btn-default" (click)="produitRecherche()">Recherche de produits</button>
       <button type="submit" class="btn btn-primary" (click)="goToAddProduits()">
       <span class="glyphicon glyphicon-floppy-disk"></span> Ajout Produit
     </button>
