--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -4,7 +4,7 @@
   <div class="col-md-12 pad-10">
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
-        <input type="text" class="form-control" placeholder="Produits">
+        <input #recherche (keyup)="onKey(recherche.value)" type="text" class="form-control" placeholder="Produits">
       </div>
       <button type="submit" class="btn btn-default" (click)="produitRecherche()">Recherche de produits</button>
       <button type="submit" class="btn btn-primary" (click)="goToAddProduits()">
