--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -13,7 +13,8 @@
     </form>
   </div>
 </div>
-<table class="table table-striped">
+<div>
+<table id="table" class="table table-striped">
   <thead>
   <tr>
     <th>Id</th>
@@ -36,3 +37,4 @@
   </tr>
   </tbody>
 </table>
+</div>
