--- a/front-end/src/app/produit/produit.component.html
+++ b/front-end/src/app/produit/produit.component.html
@@ -13,7 +13,8 @@
     </form>
   </div>
 </div>
-<table class="table table-striped">
+
+<table mdbTable>
   <thead>
   <tr>
     <th>Id</th>
@@ -24,14 +25,14 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let produit of produits">
+  <tr mdbTableCol *ngFor="let produit of produits">
     <td>{{ produit.id }}</td>
     <td>{{ produit.nom }}</td>
     <td>{{ produit.categorie }}</td>
     <td>{{ produit.fournisseur}}</td>
     <td>{{ produit.origine }}</td>
     <td>
-        <button [id]="produit.id" type="submit" class="btn btn-danger" (click)="deleteProduit(produit.id)">Supprimer</button>
+      <button [id]="produit.id" type="submit" class="btn btn-danger" (click)="deleteProduit(produit.id)">Supprimer</button>
     </td>
   </tr>
   </tbody>
