--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,13 +1,75 @@
-<div class = "jumbotron">
-  <h1 class = "display-3"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;"> Un Service Pro Pour Les Pros ! </font> </font> </ h1>
-  <p class = "lead"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">Depuis plus de 30 ans, ID lunch propose des produits frais destinés aux professionnels de la restauration. </font> </font> </p>
-  <hr class = "my-4">
-  <p> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">Spécialisé sur les produits viandes, oeufs et légumes. </font> </font> </p>
-  <p><b>Bon appétit !!</b></p>
-  <p class = "lead">
-    <a class="btn btn-success" href="https://trendstop.levif.be/fr/detail/439928949/i-d-lunch.aspx" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Dites M'en Plus</font> </font> </a>
-  </p>
-</div>
+
+
+<mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="../assets/images/leg1.jpg" alt="First slide">
+      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h3 class="h3-responsive">Un Service Pro</h3>
+      <p>Depuis plus de 30 ans,</p>
+    </div>
+  </mdb-carousel-item>
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="../assets/images/burger.jpg" alt="Second slide">
+      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h3 class="h3-responsive">Pour Les Pros !</h3>
+      <p>ID lunch propose des produits frais destinés aux professionnels de la restauration</p>
+    </div>
+  </mdb-carousel-item>
+  <mdb-carousel-item>
+    <div class="view w-100">
+      <img class="d-block w-100" src="../assets/images/poulet.jpg" alt="Third slide">
+      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
+    </div>
+    <div class="carousel-caption">
+      <h3 class="h3-responsive">Bon appétit !!</h3>
+      <p>Spécialisé sur les produits viandes, oeufs et légumes</p>
+    </div>
+  </mdb-carousel-item>
+</mdb-carousel>
+
+
+
+
+<mdb-card cascade="true" wider="true" reverse="true" class="my-4">
+  <!--Card image-->
+  <div class="view view-cascade overlay waves-light" mdbWavesEffect>
+    <mdb-card-img src="../assets/images/summer.jpg"></mdb-card-img>
+    <a>
+      <div class="mask rgba-white-slight"></div>
+    </a>
+  </div>
+  <!--/Card image-->
+
+  <!-- Card content -->
+  <mdb-card-body cascade="true" class="text-center">
+
+    <!--Title-->
+    <mdb-card-title>
+      <h4>
+        <strong>Une envie ?</strong>
+      </h4>
+    </mdb-card-title>
+
+    <h5 class="indigo-text  ">
+      <strong>Du soleil dans vos plas ?</strong>
+    </h5>
+
+    <mdb-card-text>
+      L'été arrive à grand pas ! iDlunch a le plaisir de vous proposer ses produits de saisons
+    </mdb-card-text>
+
+
+  </mdb-card-body>
+
+</mdb-card>
+
+
 
 
 
@@ -18,35 +80,112 @@
 
 
 
-<mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
-  <mdb-carousel-item>
-    <div class="view w-100">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(68).jpg" alt="First slide">
-      <div class="mask rgba-black-light waves-light" mdbWavesEffect></div>
+
+
+<!-- Footer -->
+<footer class="page-footer font-small green lighten-2 pt-4">
+
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!--Grid row-->
+    <div class="row">
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-12 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/images/leg1.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/images/leg2.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/images/leg3.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-12 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/images/leg4.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/images/poulet.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-2 col-md-6 mb-4">
+
+        <!--Image-->
+        <div class="view overlay z-depth-1-half">
+          <img src="../assets/images/leg1.jpg" class="img-fluid" alt="">
+          <a>
+            <div class="mask rgba-white-light" mdbWavesEffect></div>
+          </a>
+        </div>
+
+      </div>
+      <!--Grid column-->
+
     </div>
-    <div class="carousel-caption">
-      <h3 class="h3-responsive">Light mask</h3>
-      <p>First text</p>
-    </div>
-  </mdb-carousel-item>
-  <mdb-carousel-item>
-    <div class="view w-100">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(6).jpg" alt="Second slide">
-      <div class="mask rgba-black-strong waves-light" mdbWavesEffect></div>
-    </div>
-    <div class="carousel-caption">
-      <h3 class="h3-responsive">Strong mask</h3>
-      <p>Secondary text</p>
-    </div>
-  </mdb-carousel-item>
-  <mdb-carousel-item>
-    <div class="view w-100">
-      <img class="d-block w-100" src="https://mdbootstrap.com/img/Photos/Slides/img%20(9).jpg" alt="Third slide">
-      <div class="mask rgba-black-slight waves-light" mdbWavesEffect></div>
-    </div>
-    <div class="carousel-caption">
-      <h3 class="h3-responsive">Slight mask</h3>
-      <p>Third text</p>
-    </div>
-  </mdb-carousel-item>
-</mdb-carousel>
+    <!--Grid row-->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://www.ephec.be/">Florent, Amaury et Victoire</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
