--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 
 
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark green " [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark green lighten-1 " [containerInside]="false">
 
   <!-- Navbar brand -->
   <mdb-navbar-brand>
