--- a/front-end/src/app/connecter/connecter.component.html
+++ b/front-end/src/app/connecter/connecter.component.html
@@ -1,35 +1,59 @@
-<div id="login" class="panel panel-primary container">
-  <div class="panel-heading"><h3 class="panel-title"><strong> Identification</strong></h3></div>
-  <div class="panel-body">
-    <form id="frm-login" class="form-horizontal" action="/connexion-Privé" onsubmit="connex()" >
-      <fieldset>
-        <!-- Text input-->
-        <div class="form-group">
-          <label class="control-label" for="adresseMail"><span class="glyphicon glyphicon-user"></span> Adresse mail</label>
-          <div>
-            <input id="adresseMail" name="adresseMail" type="text" placeholder="Entrez votre adresse mail" class="form-control input-md" required="">
-          </div>
-        </div>
-        <!-- Password input-->
-        <div class="form-group">
-          <label class="control-label" for="mdp"><span class="glyphicon glyphicon-lock"></span> Mot de passe</label>
-          <div>
-            <input id="mdp" name="mdp" type="password" placeholder="Entrez votre mot de passe" class="form-control input-md" required="">
-          </div>
-        </div>
-        <!-- s'inscrire-->
-        <div>
-          <p><b>ou</b></p>
-          <a routerLink="/connexion-Privé"><span class="glyphicon glyphicon-pencil"></span> S'inscrire</a>
-        </div>
-        <!-- Button -->
-        <div class="form-group">
-          <label class="control-label" for="btnSigner"></label>
-          <div>
-            <button id="btnSigner" type="submit" name="btnSigner" class="btn btn-success">Connexion</button>
+
+
+    <!-- Material form login -->
+    <mdb-card>
+
+      <mdb-card-header class="green white-text text-center py-4">
+        <h5>
+          <strong>Connexion</strong>
+        </h5>
+      </mdb-card-header>
+
+
+      <!--Card content-->
+      <mdb-card-body class="px-lg-5 pt-0">
+
+        <!-- Form -->
+        <form class="text-center" style="color: #757575;">
+
+          <!-- Email -->
+          <div class="md-form">
+            <input type="email" id="materialLoginFormEmail" class="form-control" mdbInput>
+            <label for="materialLoginFormEmail">Mail</label>
           </div>
 
-        </div>
-      </fieldset>
-    </form>
+          <!-- Password -->
+          <div class="md-form">
+            <input type="password" id="materialLoginFormPassword" class="form-control" mdbInput>
+            <label for="materialLoginFormPassword">Mot de passe</label>
+          </div>
 
+          <div class="d-flex justify-content-around">
+            <div>
+              <!-- Remember me -->
+              <mdb-checkbox>Se souvenir de moi</mdb-checkbox>
+            </div>
+            <div>
+              <!-- Forgot password -->
+              <a href="#">Mot de passe oublié?</a>
+            </div>
+          </div>
+
+          <!-- Sign in button -->
+          <button mdbBtn color="green" outline="true" rounded="true" block="true" class="my-4 waves-effect z-depth-0" mdbWavesEffect
+                  type="submit">Se connecter</button>
+
+          <!-- Register -->
+          <p>Pas encore membre?
+            <a routerLink="/connexion-Privé">S'enregistrer</a>
+          </p>
+
+
+
+        </form>
+        <!-- Form -->
+
+      </mdb-card-body>
+
+    </mdb-card>
+    <!-- Material form login -->
