--- a/front-end/src/app/news/news.component.html
+++ b/front-end/src/app/news/news.component.html
@@ -1,58 +1,45 @@
 
-<!-- Page Content -->
-<div class="container">
 
-  <!-- Portfolio Item Heading -->
-  <h1 class="my-4">Quoi de neuf ?
-    <small>Les nouvelles chez IDlunch</small>
-  </h1>
+<!-- News jumbotron -->
+<div class="jumbotron text-center hoverable p-4">
 
-  <!-- Portfolio Item Row -->
+  <!-- Grid row -->
   <div class="row">
 
-    <div class="col-md-8">
-      <img src="../assets/images/Logo.jpg"/>
-    </div>
+    <!-- Grid column -->
+    <div class="col-md-4 offset-md-1 mx-3 my-3">
 
-    <div class="col-md-4">
-      <h3 class="my-3">News 1</h3>
-      <p>L'hiver est presque fini et les fleurs seront bientot là !</p>
-      <h3 class="my-3">Project Details</h3>
-      <ul>
-        <li>Lorem Ipsum</li>
-        <li>Dolor Sit Amet</li>
-        <li>Consectetur</li>
-        <li>Adipiscing Elit</li>
-      </ul>
+      <!-- Featured image -->
+      <div class="view overlay waves-light" mdbWavesEffect>
+        <img src="../assets/images/Panier.jpg" class="img-fluid" alt="Sample image for first version of blog listing">
+        <a>
+          <div class="mask rgba-white-slight"></div>
+        </a>
+      </div>
+
     </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-md-7 text-md-left ml-3 mt-3">
+
+      <!-- Excerpt -->
+      <a href="#!" class="green-text">
+        <h6 class="h6 pb-1"><mdb-icon fas icon="desktop" class="pr-1"></mdb-icon> Work</h6>
+      </a>
+
+      <h4 class="h4 mb-4">Les nouvelles chez IDlunch</h4>
+
+      <p class="font-weight-normal">L'hiver est presque fini et les fleurs seront bientot là !</p>
+      <p class="font-weight-normal">by <a><strong>Victoire Michel</strong></a>, 19/03/2020</p>
+
+      <a mdbBtn color="success" mdbWavesEffect>Plus de news</a>
+
+    </div>
+    <!-- Grid column -->
 
   </div>
-  <!-- /.row -->
-
-  <!-- Related Projects Row -->
-  <h3 class="my-4">Projet équitable</h3>
-
-  <div class="row">
-
-    <div class="col-md-5 col-sm-6 mb-4">
-      <a href="#">
-        <img class="img-fluid" src="../assets/images/Panier.jpg" alt="panier"/>
-        <a class="btn btn-success" href="#" role="button"> <font style = "vertical-align: inherit;"> <font style = "vertical-align: inherit;">> Apprendre encore plus </font> </font> </a>
-      </a>
-    </div>
-
-    <div class="col-md-3 col-sm-6 mb-4">
-      <a href="#">
-        <img class="img-fluid" src="../assets/images/Coeur.jpg" alt="coeur"/>
-      </a>
-    </div>
-
-
-
-
-
-  </div>
-  <!-- /.row -->
+  <!-- Grid row -->
 
 </div>
-<!-- /.container -->
+<!-- News jumbotron -->
