--- a/front-end/src/app/nav-bar/nav-bar.component.html
+++ b/front-end/src/app/nav-bar/nav-bar.component.html
@@ -31,7 +31,7 @@
           <div class="btn-group" mdbDropdown>
             <mdb-icon fas icon="user" mdbDropdownToggle></mdb-icon>
             <div class="dropdown-menu dropdown-menu-right dropdown-primary">
-              <a class="dropdown-item" href="#">Admin</a>
+              <a class="dropdown-item" routerLink="/admin">Admin</a>
               <div class="divider dropdown-divider"></div>
               <a class="dropdown-item" routerLink="/connecter">Se connecter</a>
             </div>
